Fixed z-index issue with title image and navbar expanding animation on small resolutions

--- a/themes/bootstrapped/static/css/style.css
+++ b/themes/bootstrapped/static/css/style.css
@@ -35,6 +35,7 @@ body {
     margin-right: 15px;
     top: -20px;
     width: 60px;
+    z-index: 1;
 }
 
 .site-nav {
